update de eventos